adjusted line height, font size, slideshow spacing, buttons color and size, made yt videos responsive, removed SS arrows from web version, fixed web version of navbar

--- a/src/index.css
+++ b/src/index.css
@@ -41,10 +41,7 @@ code {
   margin: auto;
 }
 
-.small-container {
-  width: 50%;
-  text-align: center;
-}
+
 
 
 
@@ -53,23 +50,22 @@ code {
   font-size: 500%;
 }
 
-/* font 9 normal normal normal 15px/1.875em helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif; */
 a {
   text-decoration: none;
   color: inherit;
 }
 
 p {
-  font-size: large;
+  font-size: 125%;
+  line-height: 1.6;
 }
-/*helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;*/
 
 /* button styling */
 
 .button {
   border: 1.5px solid black;
   border-radius: 30px;
-  padding: 15px 20px;
+  padding: 18px 25px;
   font-size: large;
   margin: 1%;
   transition-duration: 0.4s;
@@ -77,7 +73,7 @@ p {
 }
 
 .white.button {
-  background-color: white;
+  background-color: transparent;
 }
 
 .white.button:hover {
@@ -94,6 +90,22 @@ p {
   background-color: grey;
   border: 2px solid grey;
 }
+
+
+@media screen and (min-width: 769px) {
+  .small-container {
+    width: 50%;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .small-container {
+    width: 75%;
+    text-align: center;
+  }
+}
+
 /* .logo {
   display: flex;
   align-items: center;
