--- a/src/styling/about.css
+++ b/src/styling/about.css
@@ -20,6 +20,7 @@
     .about {
         background-color: rgba(128, 128, 128, 0.095);
         padding: 8% 5%;
+        margin-top: 10px;
     }  
 
     .about h1 {
