--- a/src/styling/how-to-buy.css
+++ b/src/styling/how-to-buy.css
@@ -13,6 +13,15 @@
 @media screen and (max-width: 768px) {
     .htb {
         background-color: rgba(128, 128, 128, 0.095);
-        padding: 5%;
+        padding: 3% 5% 12% 5%;
+        margin-top: 10px;
+    }
+
+    .htb h1 {
+        font-size: 2.5em;
+    }
+
+    .htb p {
+        margin-bottom: 50px;
     }
 }
